# whale-clone

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-digest.yml  publish-report.yml  quarterly-signal.yml
digest/: index.html  thread.txt
digest/archive/2026-06-29/: digest.md
docs/: PLAYBOOK.md  SWOT.md
scripts/: run.py
src/whale_clone/: __init__.py  __main__.py  allocation.py  backtest.py  broker_alpaca.py  config.py  costs.py  digest.py  execution.py  gates.py  gold.py  insiders.py  metrics.py  ml.py  paper.py  pipeline.py  portfolio.py  report.py  rigor.py  signal_backtest.py  signals.py  store.py  system.py  tracker.py  trade.py  vrp.py
src/whale_clone/data/: __init__.py  holdings.py  insiders.py  prices.py
tests/: conftest.py  test_allocation.py  test_backtest_no_lookahead.py  test_costs.py  test_data_parsing.py  test_digest.py  test_execution.py  test_gates.py  test_hardening.py  test_insiders.py  test_metrics.py  test_ml.py  test_paper.py  test_portfolio.py  test_report.py  test_rigor.py  test_signals.py  test_system.py  test_tracker.py  test_vrp.py
tests/fixtures/: dataroma_brk.html  edgar_infotable.xml  form4_buy.xml
