[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whale-clone"
version = "0.1.0"
description = "A 13F clone: copy low-turnover smart-money holdings and backtest honestly vs the index."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "whale-clone" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyarrow>=14.0",
    "requests>=2.31",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pandas-stubs",
    "types-requests",
]

[project.scripts]
whale-clone = "whale_clone.__main__:main"
whale-gold = "whale_clone.gold:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whale_clone"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
