[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whale-clone"
version = "0.1.0"
description = "A 13F clone: copy low-turnover smart-money holdings and backtest honestly vs the index."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "whale-clone" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyarrow>=14.0",
    "requests>=2.31",
    "lxml>=5.0",
]

[project.optional-dependencies]
broker = ["alpaca-py>=0.30"]
ml = ["scikit-learn>=1.3"]
dev = [
    "pytest>=8.0",
    "ruff==0.15.8",  # pinned so CI formatting matches local exactly (no drift)
    "mypy==2.1.0",  # pinned for reproducible type-checking
    "scikit-learn>=1.3",  # for the ML predictor experiment + its tests
    "pandas-stubs",
    "types-requests",
]

[project.scripts]
whale-clone = "whale_clone.__main__:main"
whale-gold = "whale_clone.gold:main"
whale-alloc = "whale_clone.allocation:main"
whale-track = "whale_clone.tracker:main"
whale-signal = "whale_clone.paper:main"
whale-trade = "whale_clone.trade:main"
whale-report = "whale_clone.report:main"
whale-ml = "whale_clone.ml:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whale_clone"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
